create register logic and query
