# handler/util.go
@@ -3,8 +3,10 @@ package handler
 import (
 	"crypto/sha1"
 	"fmt"
+	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/golang-jwt/jwt"
 	"os"
+	"regexp"
 	"time"
 )
 
@@ -30,6 +32,38 @@ func createToken(username string) (string, error) {
 	}
 
 	return tokenString, nil
+}
+
+func validateRegisterRequest(request generated.RegisterRequest) []string {
+	var errors []string
+	patternPhone := "^\\+62\\d{10,13}$"
+	hasUpper := regexp.MustCompile(`[A-Z]`).MatchString(request.Password)
+	hasDigit := regexp.MustCompile(`\d`).MatchString(request.Password)
+	hasSpecial := regexp.MustCompile(`[!@#$%^&*]`).MatchString(request.Password)
+	isIndonesia := regexp.MustCompile(patternPhone).MatchString(request.Phone)
+	if !hasUpper {
+		errors = append(errors, "Password must containing at least 1 capital characters")
+	}
+	if !hasSpecial {
+		errors = append(errors, "Password must containing at least 1 special (non alpha-numeric) characters")
+	}
+	if !hasDigit {
+		errors = append(errors, "Password must containing at least 1 number")
+	}
+	if !isIndonesia {
+		errors = append(errors, "Phone numbers must start with the Indonesia country code “+62”")
+	}
+
+	if len(request.Fullname) < 3 || len(request.Fullname) > 60 {
+		errors = append(errors, "Full name must be at minimum 3 characters and maximum 60 characters")
+	}
+	if len(request.Phone) < 12 || len(request.Phone) > 15 {
+		errors = append(errors, "Phone numbers must be at minimum 10 characters and maximum 13 characters (+62 count as 1 char)")
+	}
+	if len(request.Password) < 6 || len(request.Password) > 64 {
+		errors = append(errors, "Passwords must be minimum 6 characters and maximum 64 characters")
+	}
+	return errors
 }
 
 func verifyToken(tokenString string) error {
